reference for blog

--- a/pyspark/Classification/titanic_classification.ipynb
+++ b/pyspark/Classification/titanic_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,15 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import warnings\n",
     "plt.rc('font', family='AppleGothic')\n",
-    "plt.rcParams['axes.unicode_minus'] = False"
+    "plt.rcParams['axes.unicode_minus'] = False\n",
+    "warnings.filterwarnings(action='ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,20 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "spark = SparkSession.builder\\\n",
     "        .appName('Play with pypsark ML on Titanic Data')\\\n",
     "        .getOrCreate()\n",
-    "\n",
     "df = spark.read.csv('/Users/younghun/Desktop/gitrepo/data/titanic/train.csv', header=True, inferSchema=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -167,19 +168,19 @@
        "2      0  STON/O2. 3101282   7.9250  None        S  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# toPandas()를 이용해 판다스에서 제공하는 데이터프레임 형태로 출력\n",
-    "df.limit(3).toPandas()"
+    "df.limit(num=3).toPandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -226,25 +227,6 @@
      "output_type": "stream",
      "text": [
       "pandas_df 타입: <class 'pandas.core.frame.DataFrame'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "pandas_df = df.toPandas()\n",
-    "print(\"pandas_df 타입:\", type(pandas_df))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/younghun/opt/anaconda3/envs/venvforpython/lib/python3.7/site-packages/seaborn/distributions.py:2557: FutureWarning: `distplot` is a deprecated function and will be removed in a future version. Please adapt your code to use either `displot` (a figure-level function with similar flexibility) or `histplot` (an axes-level function for histograms).\n",
-      "  warnings.warn(msg, FutureWarning)\n"
      ]
     },
     {
@@ -261,6 +243,9 @@
     }
    ],
    "source": [
+    "pandas_df = df.toPandas()\n",
+    "print(\"pandas_df 타입:\", type(pandas_df))\n",
+    "\n",
     "# Seaborn 사용해보기\n",
     "plt.figure(figsize=(10, 5))\n",
     "plt.title(\"타이타닉 탑승객의 Age KDE 분포\")\n",
@@ -291,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +391,7 @@
        " Row(Initial='Mrs', avg(Age)=35.981818181818184)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,14 +583,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[StringIndexerModel: uid=StringIndexer_eb93c406209a, handleInvalid=error, StringIndexerModel: uid=StringIndexer_4c65f7369eb3, handleInvalid=error, StringIndexerModel: uid=StringIndexer_2ab4c704af25, handleInvalid=error]\n",
+      "StringIndexerModel: uid=StringIndexer_bb1ea92802a9, handleInvalid=error\n",
+      "--------------------------------------------------------------------------------\n",
+      "StringIndexerModel: uid=StringIndexer_81e8ee1eb63a, handleInvalid=error\n",
+      "--------------------------------------------------------------------------------\n",
+      "StringIndexerModel: uid=StringIndexer_fa10a2871e0e, handleInvalid=error\n",
+      "--------------------------------------------------------------------------------\n",
       "<class 'list'>\n"
      ]
     }
@@ -616,13 +606,16 @@
     "# 추후에 IndexToString할려면 indexer 객체를 사용하면 됨! \n",
     "indexer = [StringIndexer(inputCol=col,\n",
     "                         outputCol=col+'_index').fit(df) for col in convert_cols]\n",
-    "print(indexer)\n",
+    "for i in indexer:\n",
+    "    print(i)\n",
+    "    print('-'*80)\n",
+    "    \n",
     "print(type(indexer))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +745,7 @@
        "2        1.0             0.0            1.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +773,7 @@
        "Name: Initial_index, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -929,6 +922,111 @@
        "      <td>1.0</td>\n",
        "      <td>[3.0, 26.0, 0.0, 0.0, 7.925, 0.0, 1.0, 1.0, 0....</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[1.0, 35.0, 1.0, 0.0, 53.1, 1.0, 0.0, 1.0, 0.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>(3.0, 35.0, 0.0, 0.0, 8.05, 0.0, 1.0, 0.0, 0.0...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.4583</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>(3.0, 33.0, 0.0, 0.0, 8.4583, 0.0, 1.0, 0.0, 2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51.8625</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>(1.0, 54.0, 0.0, 0.0, 51.8625, 0.0, 1.0, 0.0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21.0750</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>[3.0, 2.0, 3.0, 1.0, 21.075, 4.0, 0.0, 0.0, 0....</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>11.1333</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[3.0, 27.0, 0.0, 2.0, 11.1333, 2.0, 0.0, 1.0, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0708</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>[2.0, 14.0, 1.0, 0.0, 30.0708, 1.0, 0.0, 1.0, ...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -938,19 +1036,40 @@
        "0         0       3  22.0      1      0   7.2500            1      0   \n",
        "1         1       1  38.0      1      0  71.2833            1      0   \n",
        "2         1       3  26.0      0      0   7.9250            0      1   \n",
+       "3         1       1  35.0      1      0  53.1000            1      0   \n",
+       "4         0       3  35.0      0      0   8.0500            0      1   \n",
+       "5         0       3  33.0      0      0   8.4583            0      1   \n",
+       "6         0       1  54.0      0      0  51.8625            0      1   \n",
+       "7         0       3   2.0      3      1  21.0750            4      0   \n",
+       "8         1       3  27.0      0      2  11.1333            2      0   \n",
+       "9         1       2  14.0      1      0  30.0708            1      0   \n",
        "\n",
        "   Sex_index  Embarked_index  Initial_index  \\\n",
        "0        0.0             0.0            0.0   \n",
        "1        1.0             1.0            2.0   \n",
        "2        1.0             0.0            1.0   \n",
+       "3        1.0             0.0            2.0   \n",
+       "4        0.0             0.0            0.0   \n",
+       "5        0.0             2.0            0.0   \n",
+       "6        0.0             0.0            0.0   \n",
+       "7        0.0             0.0            3.0   \n",
+       "8        1.0             0.0            2.0   \n",
+       "9        1.0             1.0            2.0   \n",
        "\n",
        "                                            features  \n",
        "0  (3.0, 22.0, 1.0, 0.0, 7.25, 1.0, 0.0, 0.0, 0.0...  \n",
        "1  [1.0, 38.0, 1.0, 0.0, 71.2833, 1.0, 0.0, 1.0, ...  \n",
-       "2  [3.0, 26.0, 0.0, 0.0, 7.925, 0.0, 1.0, 1.0, 0....  "
+       "2  [3.0, 26.0, 0.0, 0.0, 7.925, 0.0, 1.0, 1.0, 0....  \n",
+       "3  [1.0, 35.0, 1.0, 0.0, 53.1, 1.0, 0.0, 1.0, 0.0...  \n",
+       "4  (3.0, 35.0, 0.0, 0.0, 8.05, 0.0, 1.0, 0.0, 0.0...  \n",
+       "5  (3.0, 33.0, 0.0, 0.0, 8.4583, 0.0, 1.0, 0.0, 2...  \n",
+       "6  (1.0, 54.0, 0.0, 0.0, 51.8625, 0.0, 1.0, 0.0, ...  \n",
+       "7  [3.0, 2.0, 3.0, 1.0, 21.075, 4.0, 0.0, 0.0, 0....  \n",
+       "8  [3.0, 27.0, 0.0, 2.0, 11.1333, 2.0, 0.0, 1.0, ...  \n",
+       "9  [2.0, 14.0, 1.0, 0.0, 30.0708, 1.0, 0.0, 1.0, ...  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +1081,7 @@
     "print('feature type:', type(feature))\n",
     "print('feature_vector type', type(feature_vector))\n",
     "\n",
-    "feature_vector.limit(3).toPandas()"
+    "feature_vector.limit(10).toPandas()"
    ]
   },
   {
@@ -982,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1129,19 +1248,27 @@
       "+--------------------+--------+--------------------+--------------------+----------+\n",
       "|(10,[0,1,2,4,5],[...|       0|[0.84338731832489...|[0.69917814443410...|       0.0|\n",
       "|(10,[0,1,2,4,5],[...|       0|[0.99789437623198...|[0.73064438650957...|       0.0|\n",
+      "|(10,[0,1,2,4,5],[...|       0|[1.03793833474865...|[0.73845201053973...|       0.0|\n",
+      "|(10,[0,1,2,4,5],[...|       0|[1.05840799891815...|[0.74238619430171...|       0.0|\n",
+      "|(10,[0,1,2,4,5],[...|       0|[1.71384782028168...|[0.84733469841398...|       0.0|\n",
+      "|(10,[0,1,2,4,5],[...|       0|[1.74541815045861...|[0.85137396441796...|       0.0|\n",
+      "|(10,[0,1,2,4,5],[...|       0|[2.26469777873056...|[0.90591081711254...|       0.0|\n",
+      "|(10,[0,1,2,4,5],[...|       0|[2.30965776946158...|[0.90967373903636...|       0.0|\n",
+      "|(10,[0,1,2,4,5],[...|       0|[2.29604033780988...|[0.90854857011027...|       0.0|\n",
+      "|(10,[0,1,2,4,5],[...|       0|[2.26625399353602...|[0.90604337950913...|       0.0|\n",
       "+--------------------+--------+--------------------+--------------------+----------+\n",
-      "only showing top 2 rows\n",
+      "only showing top 10 rows\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "model_prediction.show(2)"
+    "model_prediction.show(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -1170,16 +1297,18 @@
      "output_type": "stream",
      "text": [
       "Row(probability=DenseVector([0.6992, 0.3008]), Survived=0)\n",
-      "[0.699178144434104,0.300821855565896] [0.699178144434104,0.300821855565896]\n",
-      "0 0\n"
+      "\n",
+      "probability: [0.699178144434104,0.300821855565896]\n",
+      "Survived: 0\n"
      ]
     }
    ],
    "source": [
     "# named tuple 형식이기 때문에 key 값으로 원하는 값을 불러올 수 있다!\n",
     "print(results_collect[0])\n",
-    "print(results_collect[0].probability, results_collect[0][0])\n",
-    "print(results_collect[0].Survived, results_collect[0][1])"
+    "print()\n",
+    "print('probability:', results_collect[0].probability)\n",
+    "print('Survived:', results_collect[0].Survived)"
    ]
   },
   {
