2828번 사과 담기 게임

--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -52,18 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 5 9\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### 모법 답안 ###\n",
     "import sys\n",
@@ -323,6 +314,49 @@
     "    count += min(left, right)\n",
     "    start = char\n",
     "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2828번 - 사과 담기 게임"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## terminal 에서 py파일로 실행하기 ##\n",
+    "\n",
+    "import sys\n",
+    "N, M = map(int, sys.stdin.readline().rstrip('\\n').split())\n",
+    "J = int(sys.stdin.readline().rstrip('\\n'))\n",
+    "nums = [int(sys.stdin.readline().rstrip('\\n')) for _ in range(J)]\n",
+    "\n",
+    "count = 0\n",
+    "size = M - 1 # 시작점이 1이기 때문!\n",
+    "left = 1\n",
+    "right = left + size\n",
+    "\n",
+    "for n in nums:\n",
+    "    if (left <= n and n <= right):\n",
+    "        continue\n",
+    "    # 오른쪽으로 이동할 때\n",
+    "    if right < n:\n",
+    "        temp = abs(n - right)\n",
+    "        right += temp\n",
+    "        left += temp\n",
+    "        count += temp\n",
+    "    # 왼쪽으로 이동할 때\n",
+    "    if n < left:\n",
+    "        temp = abs(left - n)\n",
+    "        right -= temp\n",
+    "        left -= temp\n",
+    "        count += temp\n",
     "print(count)"
    ]
   },
