2838번 - 설탕배달 문제

--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -361,6 +361,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2839번 - 설탕 배달"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "count = 0\n",
+    "'''\n",
+    "Idea) 가장 큰 수로 나누되 다른 작은 수로 감소시키면서 count 하기..\n",
+    "'''\n",
+    "while True:\n",
+    "    if (N % 5 == 0):\n",
+    "        count += N // 5\n",
+    "        print(count)\n",
+    "        break\n",
+    "    N -= 3\n",
+    "    count += 1\n",
+    "    if N < 0:\n",
+    "        print(-1)\n",
+    "        break"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -385,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
