--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -400,6 +400,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 15904번 - UCPC의 약자는 무엇일까?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Univ\n",
+      "I hate UCPC\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = input().replace(' ', '')\n",
+    "check_lst = ['U', 'C', 'P', 'C']\n",
+    "check = True\n",
+    "\n",
+    "for i in range(len(check_lst)):\n",
+    "    # UCPC 문자 하나씩 문장에 있는지 찾아내기\n",
+    "    if check_lst[i] in sentence:\n",
+    "        check = True\n",
+    "        # find('str') => index를 반환 \n",
+    "        idx = sentence.find(check_lst[i])\n",
+    "        # senetence의 해당 index 다음부터 C문자열 찾기.. 그다음은 P.. 다음은 C..\n",
+    "        sentence = sentence[idx+1:]\n",
+    "    # UCPC 중 하나라도 없다면 hate!\n",
+    "    else:\n",
+    "        check = False\n",
+    "        break\n",
+    "\n",
+    "if check == True:\n",
+    "    print(\"I love UCPC\")\n",
+    "else:\n",
+    "    print(\"I hate UCPC\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I hate UCPC\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 다른사람 풀이 ##\n",
+    "import sys\n",
+    "sentence = sys.stdin.readline()\n",
+    "chars = ['U', 'C', 'P', 'C']\n",
+    "idx = 0\n",
+    "\n",
+    "for s in sentence:\n",
+    "    # 만약 chars에 들어있는 문자 리스트 요소 순서대로 존재하면 index + 1 시키기\n",
+    "    if s == chars[idx]:\n",
+    "        idx += 1\n",
+    "    # chars 마지막인덱스가 3이기 때문에 3+1=4가 되면 UCPC까지 모두 돈거!\n",
+    "    if idx == 4:\n",
+    "        break\n",
+    "\n",
+    "print('I %s UCPC' % ('love' if idx == 4 else 'hate'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -424,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
