17262번 팬덤이 넘쳐흘러 문제

--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 5 9\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### 내 풀이 ###\n",
     "a, b, c = map(int, input().split())\n",
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,20 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 3\n",
-      "4 5 6\n",
-      "7 7 7\n",
-      "-6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## 나의 풀이 = 남의 풀이 ##\n",
     "box, book = map(int, input().split())\n",
@@ -111,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,19 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "S\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### 올바른 풀이 ###\n",
     "n_seats = int(input())\n",
@@ -166,18 +136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "380\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "paid = int(input())\n",
     "remain = 1000 - paid\n",
@@ -228,26 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8 7 5\n",
-      "1 3\n",
-      "2 5\n",
-      "3 5\n",
-      "4 8\n",
-      "5 8\n",
-      "6 9\n",
-      "6 7\n",
-      "7 10\n",
-      "660\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### 모범 답안 ###\n",
     "\n",
@@ -282,18 +226,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ZOAC\n",
-      "26\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### 모범 답안 ### => 이해안되면 손으로 직접 그려보기..\n",
     "# idea) 순환되는 즉 Z->A이기 때문에.. 26이라는 숫자 사용하기..\n",
@@ -369,18 +304,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "11\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N = int(input())\n",
     "count = 0\n",
@@ -408,18 +334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Univ\n",
-      "I hate UCPC\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sentence = input().replace(' ', '')\n",
     "check_lst = ['U', 'C', 'P', 'C']\n",
@@ -446,17 +363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I hate UCPC\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## 다른사람 풀이 ##\n",
     "import sys\n",
@@ -473,6 +382,77 @@
     "        break\n",
     "\n",
     "print('I %s UCPC' % ('love' if idx == 4 else 'hate'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 17262번 - 팬덤이 넘쳐흘러"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\"\"\"\n",
+    "Idea) 가장 늦게 등교한 학생의 시간 - 가장 빨리 하교한 학생의 시간!\n",
+    "\"\"\"\n",
+    "N = int(sys.stdin.readline())\n",
+    "fans = []\n",
+    "for _ in range(N):\n",
+    "    fans.append(list(map(int, sys.stdin.readline().split())))\n",
+    "# 등교한 시간 순으로 학생들 정렬\n",
+    "go = sorted(fans, key=lambda x: x[0])\n",
+    "back = sorted(fans, key=lambda x: x[1])\n",
+    "\n",
+    "# 가장 늦게 등교한 학생의 시간 - 가장 빨리 하교한 학생의 시간\n",
+    "res = go[-1][0] - back[0][1]\n",
+    "# res값이 음수면 소요시간 0!\n",
+    "if res < 0:\n",
+    "    print(0)\n",
+    "else:\n",
+    "    print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "1 4\n",
+      "2 4\n",
+      "9 10\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "fans = []\n",
+    "for _ in range(N):\n",
+    "    fan = list(map(int, input().split()))\n",
+    "    fans.append(fan)\n",
+    "\n",
+    "# 등교\n",
+    "go = sorted(fans, key=lambda x: x[0])\n",
+    "# 하교\n",
+    "back = sorted(fans, key=lambda x: x[1])\n",
+    "\n",
+    "res = go[-1][0] - back[0][1]\n",
+    "\n",
+    "if res < 0:\n",
+    "    print(0)\n",
+    "else:\n",
+    "    print(res)"
    ]
   },
   {
