--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -456,6 +456,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1439번 - 뒤집기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101010\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 첫 번째 풀이 \n",
+    "S = input()\n",
+    "count = 0\n",
+    "\n",
+    "for i in range(len(S)-1):\n",
+    "    if S[i] != S[i+1]:\n",
+    "        count += 1\n",
+    "print((count+1) // 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01001010110101011\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 두 번째 풀이\n",
+    "S = input()\n",
+    "change = [S[0]]\n",
+    "\n",
+    "for i in range(1, len(S)):\n",
+    "    if S[i] != change[-1]:\n",
+    "        change.append(S[i])\n",
+    "\n",
+    "zero_cnt = change.count('0')\n",
+    "one_cnt = change.count('1')\n",
+    "print(min(zero_cnt, one_cnt))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -480,7 +540,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
