20117번 호반우상인의 이상한 품질 계산법문제

--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -516,6 +516,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 20117번 - 호반우 상인의 이상한 품질 계산법"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### 내 풀이 ###\n",
+    "import sys\n",
+    "N = int(sys.stdin.readline())\n",
+    "Q = list(map(int, sys.stdin.readline().split()))\n",
+    "# 정렬\n",
+    "Q = sorted(Q)\n",
+    "profits = []\n",
+    "last_idx = len(Q)-1\n",
+    "\n",
+    "# 길이가 짝수일 때\n",
+    "if len(Q) % 2 == 0:\n",
+    "    for i in range(0, int(len(Q)/2)):\n",
+    "        j = last_idx - i\n",
+    "        profit = Q[j] * 2\n",
+    "        profits.append(profit)\n",
+    "# 길이가 홀수일 때\n",
+    "else:\n",
+    "    for i in range(0, int(len(Q)/2) + 1):\n",
+    "        j = last_idx - i\n",
+    "        # 가장 가운데 index에 있는 값은 1번만 더하기!\n",
+    "        if i == j:\n",
+    "            profit = Q[j]\n",
+    "            profits.append(profit)\n",
+    "        # 가운데 제외는 뒤의 index(큰 값)값을 2번 더하기\n",
+    "        else:\n",
+    "            profit = Q[j] * 2\n",
+    "            profits.append(profit)\n",
+    "\n",
+    "res = sum(profits)\n",
+    "print(res)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
