2720번 세탁소 사장 동혁문제

--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -561,11 +561,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2720번 세탁소 사장 동혁"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### 내가 푼 풀이 ###\n",
+    "import sys\n",
+    "T = int(sys.stdin.readline())\n",
+    "C = [int(sys.stdin.readline()) for _ in range(T)]\n",
+    "coins =[25, 10, 5, 1]\n",
+    "count = [0, 0, 0, 0]\n",
+    "\n",
+    "for c in C:\n",
+    "    for i, coin in enumerate(coins):\n",
+    "        count[i] = str(c // coin)\n",
+    "        c %= coin\n",
+    "    print(' '.join(count))"
+   ]
   }
  ],
  "metadata": {
@@ -585,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
