1783번 병든나이트 문제

--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -586,6 +586,44 @@
     "        c %= coin\n",
     "    print(' '.join(count))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1783번 병든 나이트"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "'''\n",
+    "idea) 이동 방법에 대한 제약이 없다는 것 = 1,2,3,4 한 번씩 무조건 수행 안해도 됨!\n",
+    "즉, 1번만 계속하던 뭐하던 상관없음!!\n",
+    "'''\n",
+    "N, M = map(int, sys.stdin.readline().split())\n",
+    "\n",
+    "if N == 1:\n",
+    "    count = 1\n",
+    "elif N == 2:\n",
+    "    count = min(4, (M-1)//2 + 1)\n",
+    "elif N >= 3 and M < 7:\n",
+    "    count = min(4, M)\n",
+    "else:\n",
+    "    count = (2 + 1 + (M - 5))\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -605,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
