--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -619,11 +619,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2891번 카약과 강풍"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "N, S, R = map(int, sys.stdin.readline().split())\n",
+    "broken = list(map(int, sys.stdin.readline().split()))\n",
+    "spare = list(map(int, sys.stdin.readline().split()))\n",
+    "\n",
+    "no_start = S\n",
+    "\n",
+    "for i in range(S):\n",
+    "    # 여분 카약이 없을 때!(빈 리스트는 False임!)\n",
+    "    if not spare:\n",
+    "        break\n",
+    "    for j in range(R):\n",
+    "        if broken[i] == spare[j] or broken[i] == spare[j]+1 or broken[i] == spare[j]-1:\n",
+    "            no_start -= 1\n",
+    "            spare[j] = -1 # 여분의 카약 사용한 인덱스 값에 -1 넣기\n",
+    "            break # 이걸 만나면 첫 번째 loop문으로 빠져나감!(즉, i+1번째로 바로 넘어감!)\n",
+    "print(no_start)"
+   ]
   }
  ],
  "metadata": {
@@ -643,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
