--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -649,6 +649,41 @@
     "            break # 이걸 만나면 첫 번째 loop문으로 빠져나감!(즉, i+1번째로 바로 넘어감!)\n",
     "print(no_start)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4796번 캠핑"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Idea) 반례 찾기..\n",
+    "'''\n",
+    "import sys\n",
+    "case_num = 0\n",
+    "case_dict = {}\n",
+    "\n",
+    "while True:\n",
+    "    L, P, V = map(int, sys.stdin.readline().split())\n",
+    "    if L == 0:\n",
+    "        break\n",
+    "    case_num += 1\n",
+    "    if V % P > L:\n",
+    "        count = (V // P) * L + L\n",
+    "    else:\n",
+    "        count = (V // P) * L + V % P\n",
+    "    case_dict[case_num] = count\n",
+    "\n",
+    "for k, v in case_dict.items():\n",
+    "    print(f\"Case {k}: {v}\")"
+   ]
   }
  ],
  "metadata": {
@@ -668,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
