19940번 피자오븐 문제

--- a/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/greedy_baekjoon.ipynb
@@ -684,6 +684,82 @@
     "for k, v in case_dict.items():\n",
     "    print(f\"Case {k}: {v}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 19940번 피자 오븐"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n",
+      "0 0 0 5 0\n",
+      "12\n",
+      "0 1 0 2 0\n",
+      "27\n",
+      "0 3 0 0 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Idea\n",
+    "- 우선 가장 큰 60초로 나누기\n",
+    "- 남은 시간이 35분 이하라면 그대로 최소횟수를 구하고\n",
+    "- 남은 시간이 35분 초과라면 60-n(n %= 60)값의 최소횟수를 구하도록 함\n",
+    "'''\n",
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    N = int(input())\n",
+    "    counts = [0, 0, 0, 0, 0] # 60, 10, -10, 1, -1\n",
+    "    counts[0] += N // 60\n",
+    "    N %= 60\n",
+    "\n",
+    "    def get_count(n):\n",
+    "        count = [0, 0, 0] # 10, 1, -1\n",
+    "        # 우선 10을 몇 번 적용할지(이게 10일지 -10일지는 N값에 따라 달라짐!)\n",
+    "        count[0] += n // 10\n",
+    "        # 나머지값이 1~5면 1씩 더하는 게 나음!\n",
+    "        if n % 10 <= 5:\n",
+    "            count[1] += n % 10\n",
+    "        # 그렇지 않으면 10을 더하고 1을 빼는게 나음!\n",
+    "        else:\n",
+    "            count[0] += 1\n",
+    "            count[2] += 10 - (n % 10)\n",
+    "        return count\n",
+    "    # N이 35보다 작으면 1에서 시작하는게 더 빠름\n",
+    "    if N <= 35:\n",
+    "        res = get_count(N)\n",
+    "        counts[1] += res[0] # +10\n",
+    "        counts[3] += res[1] # +1\n",
+    "        counts[4] += res[2] # -1\n",
+    "    # N이 35보다 크면 60을 한 번 더하고 거기서 빼주는게 더 빠름\n",
+    "    else:\n",
+    "        res = get_count(N)\n",
+    "        counts[0] += 1\n",
+    "        counts[2] += res[0] # -10을 의미\n",
+    "        counts[3] += res[2] # 함수안에서는 -1을 의미하지만 실질적으로는 +1을 의미\n",
+    "        counts[4] += res[1]\n",
+    "\n",
+    "    print(*counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -703,7 +779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
