1292번 쉽게 푸는 문제

--- a/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
+++ b/Algorithm(Python)/Greedy/implementation_baekjoon.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#책-예제)-왕실의-나이트\" data-toc-modified-id=\"책-예제)-왕실의-나이트-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>책 예제) 왕실의 나이트</a></span></li><li><span><a href=\"#게임개발\" data-toc-modified-id=\"게임개발-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>게임개발</a></span></li><li><span><a href=\"#1063번---킹\" data-toc-modified-id=\"1063번---킹-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>1063번 - 킹</a></span></li><li><span><a href=\"#1292번---쉽게-푸는-문제\" data-toc-modified-id=\"1292번---쉽게-푸는-문제-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>1292번 - 쉽게 푸는 문제</a></span></li></ul></div>"
    ]
   },
   {
@@ -125,6 +125,105 @@
     "        turn_time = 0\n",
     "print(count)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1063번 - 킹\n",
+    "- '\\n'은 strip 메소드로 공백을 제거하자!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "inputs = list(sys.stdin.readline().split())\n",
+    "k_yx, s_yx = inputs[0], inputs[1]\n",
+    "N = int(inputs[2])\n",
+    "\n",
+    "\n",
+    "def change_xy(yx):\n",
+    "    x, y = int(yx[1]), yx[0]  # x는 8~1 => 0~7 / y는 A~H => 0~7\n",
+    "    x = abs(x - 8)\n",
+    "    y = ord(y) - ord('A')\n",
+    "    return x, y\n",
+    "\n",
+    "\n",
+    "def inverse_change(x, y):\n",
+    "    x = str(abs(x - 8))\n",
+    "    y = chr(y + ord('A'))\n",
+    "    yx = y+x\n",
+    "    return yx\n",
+    "\n",
+    "\n",
+    "# 킹의 초기 위치와 돌의 초기 위치를 좌표로 변환\n",
+    "k_x, k_y = change_xy(k_yx)\n",
+    "s_x, s_y = change_xy(s_yx)\n",
+    "\n",
+    "# 방향 벡터 정의\n",
+    "vector_dict = {'R': (0, 1), 'L': (0, -1), 'B': (1, 0), 'T': (-1, 0),\n",
+    "               'RT': (-1, 1), 'LT': (-1, -1), 'RB': (1, 1), 'LB': (1, -1)}\n",
+    "# 입력되는 방향 리스트 담기\n",
+    "vectors = [sys.stdin.readline().rstrip() for _ in range(N)]\n",
+    "\n",
+    "for v in vectors:\n",
+    "    dx, dy = vector_dict[v][0], vector_dict[v][1]\n",
+    "    nx = k_x + dx\n",
+    "    ny = k_y + dy\n",
+    "    # 이동한 위치가 체스판 밖으로 벗어날 경우 건너 뛰기\n",
+    "    if nx < 0 or ny < 0 or 7 < nx or 7 < ny:\n",
+    "        continue\n",
+    "    # 이동한 위치에 돌이 있을 경우 돌도 같은 방향으로 옮기기\n",
+    "    if nx == s_x and ny == s_y:\n",
+    "        new_s_x = s_x + dx\n",
+    "        new_s_y = s_y + dy\n",
+    "        if new_s_x < 0 or new_s_y < 0 or 7 < new_s_x or 7 < new_s_y:\n",
+    "            continue\n",
+    "        else:\n",
+    "            s_x, s_y = new_s_x, new_s_y\n",
+    "\n",
+    "    # 그렇지 않은 경우 = 주변에 돌도 없고 체스판 안쪽일 경우\n",
+    "    k_x, k_y = nx, ny\n",
+    "\n",
+    "final_k_yx = inverse_change(k_x, k_y)\n",
+    "final_s_yx = inverse_change(s_x, s_y)\n",
+    "print(final_k_yx)\n",
+    "print(final_s_yx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1292번 - 쉽게 푸는 문제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import chain\n",
+    "import sys\n",
+    "\n",
+    "a = [[i] * i for i in range(1, 1001)]\n",
+    "b = list(chain.from_iterable(a))\n",
+    "A, B = map(int, sys.stdin.readline().split())\n",
+    "res = sum(b[A-1: B])\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
